Fix parsing of negation in ImageSearchInfo

BUG: 334672